--- a/Sentiment_model.ipynb
+++ b/Sentiment_model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMVCWjyoVaO3wQaHQNrsDRN",
+      "authorship_tag": "ABX9TyM4syupZNMbtzHoEmmz8REm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Smart Feedback Classification System\n",
+        "This project trains a machine learning model to classify user feedback as\n",
+        "Positive or Negative.\n"
+      ],
+      "metadata": {
+        "id": "3gRufzpLJAqi"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "#importing required libraries and loading & reading the csv file into a dataframe called df\n",
         "import pandas as pd\n",
         "\n",
         "df = pd.read_csv(\n",
@@ -36,17 +48,17 @@
         "    encoding=\"latin-1\"\n",
         ")\n",
         "\n",
-        "df.head()\n"
+        "df.head() #shows the first 5 rows of the dataset\n"
       ],
       "metadata": {
+        "id": "1maBzb73WZkv",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "id": "1maBzb73WZkv",
-        "outputId": "d0e4263a-8e7a-4064-fa97-f7f3e95d0306"
+        "outputId": "59d5838d-6100-4e1d-ae32-7187ed1b6c38"
       },
-      "execution_count": 23,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -61,7 +73,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-cbed3865-4792-49e9-b5ca-bd0a147f29b7\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-35696711-b9a5-449c-9a3f-aced42f8b0bb\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -116,7 +128,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cbed3865-4792-49e9-b5ca-bd0a147f29b7')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-35696711-b9a5-449c-9a3f-aced42f8b0bb')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -168,12 +180,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-cbed3865-4792-49e9-b5ca-bd0a147f29b7 button.colab-df-convert');\n",
+              "        document.querySelector('#df-35696711-b9a5-449c-9a3f-aced42f8b0bb button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-cbed3865-4792-49e9-b5ca-bd0a147f29b7');\n",
+              "        const element = document.querySelector('#df-35696711-b9a5-449c-9a3f-aced42f8b0bb');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -193,8 +205,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-e552e94b-7b27-42dc-998d-1a822a79dd9a\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e552e94b-7b27-42dc-998d-1a822a79dd9a')\"\n",
+              "    <div id=\"df-449a2bf4-6e4e-47c4-b9db-77c563857902\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-449a2bf4-6e4e-47c4-b9db-77c563857902')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -313,7 +325,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-e552e94b-7b27-42dc-998d-1a822a79dd9a button');\n",
+              "            document.querySelector('#df-449a2bf4-6e4e-47c4-b9db-77c563857902 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -329,13 +341,14 @@
             }
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 2
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "#showing the exact column names present in the dataset\n",
         "df.columns\n"
       ],
       "metadata": {
@@ -345,7 +358,7 @@
         "id": "nLrhiqfVWwAF",
         "outputId": "a11f53de-e0b6-4b12-e513-2e811e459ac7"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -362,7 +375,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df['sentiment'].value_counts()\n"
+        "df['sentiment'].value_counts() #shows how many samples belong to each sentiment class\n"
       ],
       "metadata": {
         "colab": {
@@ -372,7 +385,7 @@
         "id": "ve3dhL9EW3ic",
         "outputId": "da4d59fb-306a-4fca-a739-3f740a4c2ae8"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -431,23 +444,24 @@
     {
       "cell_type": "code",
       "source": [
-        "df = df.rename(columns={\"sentence\": \"text\"})\n"
+        "df = df.rename(columns={\"sentence\": \"text\"}) #renaming the sentence column to text\n"
       ],
       "metadata": {
         "id": "9xNgth9QW-Bc"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "#cleaning of text\n",
         "import re\n",
         "\n",
         "def clean_text(text):\n",
-        "    text = text.lower()\n",
-        "    text = re.sub(r\"http\\S+\", \"\", text)\n",
-        "    text = re.sub(r\"[^a-z\\s]\", \"\", text)\n",
+        "    text = text.lower() #convert to lowercase\n",
+        "    text = re.sub(r\"http\\S+\", \"\", text) #removing url's\n",
+        "    text = re.sub(r\"[^a-z\\s]\", \"\", text) #removing symbols and numbers\n",
         "    return text\n",
         "\n",
         "df['clean_text'] = df['text'].apply(clean_text)\n",
@@ -456,12 +470,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 275
+          "height": 206
         },
         "id": "W8_sFrkKXHYb",
         "outputId": "bc8d3878-550f-4f0d-f8c1-08e881ed4328"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -764,6 +778,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#train-test split\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "X = df['clean_text']\n",
@@ -776,32 +791,35 @@
       "metadata": {
         "id": "9EbYeBmpXUMT"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "#TF-IDF vectorization - convert text to numbers\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
         "\n",
         "vectorizer = TfidfVectorizer(stop_words='english', max_features=5000)\n",
         "\n",
-        "X_train_vec = vectorizer.fit_transform(X_train)\n",
-        "X_test_vec = vectorizer.transform(X_test)\n"
+        "X_train_vec = vectorizer.fit_transform(X_train) #learns importance of word from training data (common words-low weight, rare but important words -high weight)\n",
+        "X_test_vec = vectorizer.transform(X_test) #applies what it has learnt\n"
       ],
       "metadata": {
         "id": "P_AteGpEXWqS"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "#Logistic regression training\n",
+        "#learns whether those imp words are of positive or negative sentiment\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "\n",
         "model = LogisticRegression(max_iter=1000)\n",
-        "model.fit(X_train_vec, y_train)\n"
+        "model.fit(X_train_vec, y_train) # looks at the training text (in numbers) and the correct answers, and learn which words mean Positive and which mean Negative.\n"
       ],
       "metadata": {
         "colab": {
@@ -811,7 +829,7 @@
         "id": "4WdaGz1HXuxT",
         "outputId": "a0fcdb62-b071-4f03-b0fd-90729d5719db"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1246,9 +1264,10 @@
     {
       "cell_type": "code",
       "source": [
+        "#evaluating the performance on unseen data\n",
         "from sklearn.metrics import accuracy_score, classification_report\n",
         "\n",
-        "preds = model.predict(X_test_vec)\n",
+        "preds = model.predict(X_test_vec) #predicts sentiment based on what it has learned\n",
         "\n",
         "print(\"Accuracy:\", accuracy_score(y_test, preds))\n",
         "print(classification_report(y_test, preds))\n"
@@ -1260,7 +1279,7 @@
         "id": "oojNu7hqYBIy",
         "outputId": "0e5725db-af73-46a5-83de-c1fc1004273c"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1283,6 +1302,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#loading and reading a sample test csv file (unseen data)\n",
         "test_df = pd.read_csv(\n",
         "    \"test_data.csv\",\n",
         "    encoding=\"latin-1\"\n",
@@ -1291,14 +1311,14 @@
         "test_df.head()\n"
       ],
       "metadata": {
+        "id": "kJA40s9pY-eX",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "id": "kJA40s9pY-eX",
-        "outputId": "b020cc11-1af0-488f-be86-65d3245b166c"
+        "outputId": "815c9405-129b-41f1-85c3-d009b6e46b76"
       },
-      "execution_count": 33,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1313,7 +1333,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e44bbd90-848e-424a-b1f7-f6a0e5e30c93\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d2068b2c-afd5-4488-986d-8c918fbb33bc\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1368,7 +1388,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e44bbd90-848e-424a-b1f7-f6a0e5e30c93')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d2068b2c-afd5-4488-986d-8c918fbb33bc')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1420,12 +1440,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-e44bbd90-848e-424a-b1f7-f6a0e5e30c93 button.colab-df-convert');\n",
+              "        document.querySelector('#df-d2068b2c-afd5-4488-986d-8c918fbb33bc button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-e44bbd90-848e-424a-b1f7-f6a0e5e30c93');\n",
+              "        const element = document.querySelector('#df-d2068b2c-afd5-4488-986d-8c918fbb33bc');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1445,8 +1465,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-a072a906-fc3f-47bf-810d-c68f4cb479b9\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a072a906-fc3f-47bf-810d-c68f4cb479b9')\"\n",
+              "    <div id=\"df-7e8fb51e-9711-4280-b0fd-fdd67eb5c6d7\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7e8fb51e-9711-4280-b0fd-fdd67eb5c6d7')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1565,7 +1585,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-a072a906-fc3f-47bf-810d-c68f4cb479b9 button');\n",
+              "            document.querySelector('#df-7e8fb51e-9711-4280-b0fd-fdd67eb5c6d7 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1582,7 +1602,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 3
         }
       ]
     },
@@ -1598,7 +1618,7 @@
         "id": "TLIXHKlvZPmM",
         "outputId": "eef31ba0-d719-4ce1-82a0-3c83892cb783"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1620,40 +1640,43 @@
       "metadata": {
         "id": "hO8T11tUZYCd"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "#clean test data with the same logic as used for training data(same cleaning function is used)\n",
         "test_df['clean_text'] = test_df['text'].apply(clean_text)\n"
       ],
       "metadata": {
         "id": "hiz6xI9tZdJf"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "#vectorize test data (apply what it has learned) - no re-training\n",
         "X_test_new = vectorizer.transform(test_df['clean_text'])\n"
       ],
       "metadata": {
         "id": "e-psQFcxZqIt"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "#predict sentiment (apply what it has learned)\n",
         "test_df['predicted_sentiment'] = model.predict(X_test_new)\n"
       ],
       "metadata": {
         "id": "TFIxi8_kZyuV"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1669,7 +1692,7 @@
         "id": "ElR53IozaAh7",
         "outputId": "3e8deb1b-31c2-4ebe-d79a-314627636fb4"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1959,6 +1982,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#accuracy report\n",
         "from sklearn.metrics import accuracy_score, classification_report\n",
         "\n",
         "print(\"Test Accuracy:\",\n",
@@ -1976,7 +2000,7 @@
         "id": "PpuStCF0aaaU",
         "outputId": "1b80e685-05c3-46c7-ff3d-4f41a63c9f8b"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1999,6 +2023,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#installing gradio ui\n",
         "!pip install gradio\n"
       ],
       "metadata": {
@@ -2008,7 +2033,7 @@
         "id": "RA6BGkGChcwf",
         "outputId": "8d4dbe96-a9aa-4971-b166-67f4666f6ef1"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2076,6 +2101,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#connecting ui to the model\n",
         "def predict_sentiment_ui(text):\n",
         "    cleaned = clean_text(text)\n",
         "    vector = vectorizer.transform([cleaned])\n",
@@ -2089,12 +2115,13 @@
       "metadata": {
         "id": "rjuMcuIvhiDB"
       },
-      "execution_count": 42,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "#building the UI\n",
         "import gradio as gr\n",
         "\n",
         "ui = gr.Interface(\n",
@@ -2110,12 +2137,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 645
+          "height": 650
         },
         "id": "pRKi0DADhrLt",
-        "outputId": "fe685a39-0397-4ee1-9864-b6bd64808a92"
+        "outputId": "a876f8d1-c8c7-475b-c4e8-b8cc3ceb4282"
       },
-      "execution_count": 43,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -2124,7 +2151,7 @@
             "It looks like you are running Gradio on a hosted Jupyter notebook, which requires `share=True`. Automatically setting `share=True` (you can turn this off by setting `share=False` in `launch()` explicitly).\n",
             "\n",
             "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
-            "* Running on public URL: https://238f620144e067ee2c.gradio.live\n",
+            "* Running on public URL: https://8b568cef682e7a4dba.gradio.live\n",
             "\n",
             "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
           ]
@@ -2136,7 +2163,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<div><iframe src=\"https://238f620144e067ee2c.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+              "<div><iframe src=\"https://8b568cef682e7a4dba.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
             ]
           },
           "metadata": {}
@@ -2147,7 +2174,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 2
         }
       ]
     }
