--- a/Sentiment_model.ipynb
+++ b/Sentiment_model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM4syupZNMbtzHoEmmz8REm",
+      "authorship_tag": "ABX9TyM7fj8CbIvqoziwj/6yN+Kw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -461,7 +461,7 @@
         "def clean_text(text):\n",
         "    text = text.lower() #convert to lowercase\n",
         "    text = re.sub(r\"http\\S+\", \"\", text) #removing url's\n",
-        "    text = re.sub(r\"[^a-z\\s]\", \"\", text) #removing symbols and numbers\n",
+        "    text = re.sub(r\"[^a-z\\s]\", \"\", text) #removing everything except lowercase letters and spaces\n",
         "    return text\n",
         "\n",
         "df['clean_text'] = df['text'].apply(clean_text)\n",
